Site/assets/css/header.css
.navbar {
	background-color: white;
	border-bottom: 2px solid #B3B3B3;
}

.nav-item {
	margin: 10px;
	font-size: 18px;
	text-align: center;
}

.nav-item a {
	color: #FFF;
	text-decoration: none;
	margin: 0px 10px;
	padding: 10px 10px !important;
	position: relative;
	z-index: 0;
	cursor: pointer;
}

.nav-item a:before {
	position: absolute;
	width: 100%;
	height: 2px;
	left: 0px;
	top: 0px;
	content: '';
	background: #B3B3B3;
	opacity: 0.5;
	transition: all 0.3s;
}

.nav-item a:hover:before {
	height: 100%;
}

.nav-item-active {
	margin: 10px;
	font-size: 18px;
	text-align: center;
}

.nav-item-active a {
	content: '';
	background: #B3B3B3;
	opacity: 0.5;
	color: #FFF;
	text-decoration: none;
	margin: 0px 10px;
	padding: 10px 10px !important;
	position: relative;
	z-index: 0;
	cursor: pointer;
}

#navbarSupportedContent {
	justify-content: center;
}

#logo-header {
	width: 150px;
	position: absolute;
	z-index: 2;
	margin-top: -30px;
	margin-left: 30px;
}

/*------------------Boutons Administration--------------------*/
.adminTools {
	right: 0;
    align-self: flex-start;
    position: absolute;
    padding: 15px;
}

.logout {
	background-image: url(../images/core/logout.svg);
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;
	height: 30px;
	width: 30px;
}

.disconnect:hover  {
	background-color: #E98B39;
}

.disconnect:hover .logout {
	background-image: url(../images/core/logoutHover.svg);
}

@media screen and (max-width: 992px) {
	.adminTools {
		margin-top: 8px;
	}
	.navbar {
		justify-content: center;
	}
	.navbar-toggler {
		border-color: #fff!important;
	}
	.button-menu {
		margin-right: -40px;
	}
	.navbar-nav {
		align-items: center;
	}
	#logo-header {
		position: relative;
		margin-top: 0px;
		width:80px;
		height:80px;
	}
}

